fix: selected task item border color in dark mode

--- a/src/renderer/components/Theme/Dark.scss
+++ b/src/renderer/components/Theme/Dark.scss
@@ -84,6 +84,10 @@
     }
   }
 
+  .selected .task-item {
+    border-color: $--dk-task-item-hover-border-color;
+  }
+
   .task-name {
     color: $--dk-task-item-text-color;
   }
